@@ -1,14 +1,12 @@
 package org.openapitools.codegen;
 
-import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.fail;
-import static org.testng.Assert.assertTrue;
-import static org.testng.Assert.assertFalse;
-
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.github.javaparser.JavaParser;
-import com.github.javaparser.ParserConfiguration;
 import com.github.javaparser.ParseResult;
+import com.github.javaparser.ParserConfiguration;
 import com.github.javaparser.ast.CompilationUnit;
+import com.google.common.collect.ImmutableMap;
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
@@ -17,30 +15,20 @@ import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.parser.core.models.ParseOptions;
-
-import org.apache.commons.io.IOUtils;
 import org.openapitools.codegen.MockDefaultGenerator.WrittenTemplateBasedFile;
 import org.openapitools.codegen.java.assertions.JavaFileAssert;
 import org.openapitools.codegen.model.ModelMap;
 import org.openapitools.codegen.model.ModelsMap;
 import org.openapitools.codegen.utils.ModelUtils;
-import org.openrewrite.maven.internal.RawPom;
 import org.testng.Assert;
 
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
-import com.google.common.collect.ImmutableMap;
+import static org.testng.Assert.*;
 
 public class TestUtils {
 
@@ -100,7 +88,7 @@ public class TestUtils {
         return openAPI;
     }
 
-    public static OpenAPI createOpenAPIWithOneSchema(String name, Schema schema) {
+    public static OpenAPI createOpenAPIWithOneSchema(String name, Schema<?> schema) {
         OpenAPI openAPI = createOpenAPI();
         openAPI.setComponents(new Components());
         openAPI.getComponents().addSchemas(name, schema);
@@ -135,47 +123,36 @@ public class TestUtils {
         assertFalse(generatedFiles.contains(path.toFile()), "File '" + path.toAbsolutePath() + "' was found in the list of generated files");
     }
 
-    public static void validatePomXmlFiles(final Map<String, String> fileMap) {
-        fileMap.forEach( (fileName, fileContents) -> {
-            if ("pom.xml".equals(fileName)) {
-                assertValidPomXml(fileContents);
-            }
-        });
-    }
-
     public static void validatePomXmlFiles(final List<File> files) {
-        files.forEach( f -> {
-                    String fileName = f.getName();
-                    if ("pom.xml".equals(fileName)) {
-                        try {
-                            String fileContents = new String(Files.readAllBytes(f.toPath()), StandardCharsets.UTF_8);
-                            assertValidPomXml(fileContents);
-                        } catch (IOException exception) {
-                            throw new RuntimeException(exception);
-                        }
-                    }
-                }
-        );
+        if (files == null 
+            || files.isEmpty() 
+            || files.stream().noneMatch(f -> f.getName().equals("pom.xml"))) return;
+        
+        final XmlMapper mapper = new XmlMapper();
+        for (File file : files) {
+            if (!"pom.xml".equals(file.getName())) continue;
+
+            try {
+                JsonNode pomContents = mapper.readTree(file);
+                assertValidPomXml(pomContents);
+            } catch (IOException exception) {
+                throw new RuntimeException(exception);
+            }
+        };
     }
 
-    private static void assertValidPomXml(final String fileContents) {
-        final InputStream input = new ByteArrayInputStream(fileContents.getBytes(StandardCharsets.UTF_8));
-        try {
-            RawPom pom = RawPom.parse(input, null);
-            assertTrue(pom.getDependencies().getDependencies().size() > 0);
-            assertNotNull(pom.getName());
-            assertNotNull(pom.getArtifactId());
-            assertNotNull(pom.getGroupId());
-            assertNotNull(pom.getVersion());
-        } finally {
-            IOUtils.closeQuietly(input);
-        }
+    private static void assertValidPomXml(final JsonNode pom) {
+        assertFalse(pom.path("dependencies").isEmpty());
+        assertNotNull(pom.get("name"));
+        assertNotNull(pom.get("artifactId"));
+        assertNotNull(pom.get("groupId"));
+        assertNotNull(pom.get("version"));
     }
 
     public static void validateJavaSourceFiles(Map<String, String> fileMap) {
         fileMap.forEach( (fileName, fileContents) -> {
                 if (fileName.endsWith(".java")) {
-                    assertValidJavaSourceCode(fileContents, fileName);
+                    assertValidJavaSourceCode(fileContents);
                 }
             }
         );
@@ -183,21 +160,20 @@ public class TestUtils {
 
     public static void validateJavaSourceFiles(List<File> files) {
         files.forEach( f -> {
-                    String fileName = f.getName();
-                    if (fileName.endsWith(".java")) {
+                    if (f.getName().endsWith(".java")) {
                         String fileContents = "";
                         try {
-                            fileContents = new String(Files.readAllBytes(f.toPath()), StandardCharsets.UTF_8);
+                            fileContents = Files.readString(f.toPath());
                         } catch (IOException ignored) {
 
                         }
-                        assertValidJavaSourceCode(fileContents, fileName);
+                        assertValidJavaSourceCode(fileContents);
                     }
                 }
         );
     }
 
-    public static void assertValidJavaSourceCode(String javaSourceCode, String filename) {
+    public static void assertValidJavaSourceCode(String javaSourceCode) {
         ParserConfiguration config = new ParserConfiguration();
         config.setLanguageLevel(ParserConfiguration.LanguageLevel.JAVA_11);
         JavaParser parser = new JavaParser(config);
@@ -207,7 +183,7 @@ public class TestUtils {
 
     public static void assertFileContains(Path path, String... lines) {
         try {
-            String generatedFile = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            String generatedFile = Files.readString(path);
             String file = linearize(generatedFile);
             assertNotNull(file);
             for (String line : lines)
@@ -224,7 +200,7 @@ public class TestUtils {
     public static void assertFileNotContains(Path path, String... lines) {
         String generatedFile = null;
         try {
-            generatedFile = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            generatedFile = Files.readString(path);
         } catch (IOException e) {
             fail("Unable to evaluate file " + path);
         }
@@ -236,7 +212,7 @@ public class TestUtils {
 
     public static void assertFileNotExists(Path path) {
         try {
-            new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            Files.readString(path);
             fail("File exists when it should not: " + path);
         } catch (IOException e) {
             // File exists, pass.
@@ -246,7 +222,7 @@ public class TestUtils {
 
     public static void assertFileExists(Path path) {
         try {
-            new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            Files.readString(path);
             // File exists, pass.
             assertTrue(true);
         } catch (IOException e) {
